--- a/demo.html
+++ b/demo.html
@@ -168,7 +168,7 @@
                     <div class="starter-template" ng-controller="glyphCtrl">
                         <div class="starter-template" >
                                 <div id="glyph"></div>
-                                <div class="sliders" id="glyphSlider" style="text-align:left"></div>
+                                <div class="sliders" id="glyphSlider" style="text-align:center"></div>
                                 <div class="starter-template" style="margin-bottom: 100px">
                                 </div>
 
@@ -179,7 +179,7 @@
                     <div class="starter-template" ng-controller="wordCtrl">
                         <div class="starter-template">
                             <div id="glyphsWord"></div>
-                            <div class="sliders" id="wordSlider" style="margin-bottom: 200px; margin-top: 50px;"></div>
+                            <div class="sliders" id="wordSlider" style="margin-bottom: 200px; margin-top: 50px; text-align:center"></div>
                         </div>
                     </div>
                 </div>
