midi dev console out

--- a/demo.html
+++ b/demo.html
@@ -466,6 +466,8 @@ $(document).ready(function(){
                 }
                 midiMessages.innerHTML += msg.toString() + "<br/>";
                 midiMessages.scrollTop = midiMessages.scrollHeight;
+                console.log(msg.data1);
+                console.log(msg.data2);
             });
         }
     }
