--- a/demo.html
+++ b/demo.html
@@ -460,14 +460,15 @@ $(document).ready(function(){
 
     function connectDevices(MIDIAccess){
         if(input){
+            var temp;
             input.addEventListener("midimessage",function(msg){
                 if(output){
                     output.sendMIDIMessage(msg);
                 }
-                midiMessages.innerHTML += msg.toString() + "<br/>";
-                midiMessages.scrollTop = midiMessages.scrollHeight;
-                console.log(msg.data1);
-                console.log(msg.data2);
+                if (msg != temp){
+                    console.log(msg.data);
+                    temp = msg;
+                }
             });
         }
     }
