--- a/demo.html
+++ b/demo.html
@@ -466,7 +466,7 @@ $(document).ready(function(){
                     output.sendMIDIMessage(msg);
                 }
                 if (msg != temp){
-                    console.log(msg.data);
+                    console.log(msg);
                     temp = msg;
                 }
             });
