--- a/demo.html
+++ b/demo.html
@@ -107,7 +107,7 @@ If we want to specify single points we click on a point in the editor and assign
      <div class="container">
         <div class="starter-template">
           <h1>Can I design a glyph from scratch?</h1>
-            <p class="lead"> Yes, but do it on paper! :) Metapolator is a system to create new styles and font families from existing fonts outlines. The system is designed to work seamlessly within the working process of type design. The design process could be for example; sketching on paper -- creating outlines in a font editor -- making new styles and families in Metapolator -- refine ufo’s in a font editor.
+            <p class="lead"> No. Metapolator is a system to create new styles and font families from existing fonts outlines. The system is designed to work seamlessly within the working process of type design. For example; sketching on paper -- creating outlines in a font editor -- making new styles and families in Metapolator -- refine ufo’s in a font editor.
             </p>
                <a href="#" class="thumbnail">
                <img src="images/sketch.jpg" alt="...">
@@ -127,18 +127,15 @@ If we want to specify single points we click on a point in the editor and assign
       <div class="container">
         <div class="starter-template">
           <h1>Why is the slider stack always visible?</h1>
-            <p class="lead"> A core element is the metapolation settings. To compare values with other instances the controller is on the same view as the instances itself. Controllers can be hidden individually or by pressing ‘h’.
+            <p class="lead"> The core elements are metapolation settings and specimen cards. To compare values with other instances controllers are always on the same view as the instance itself. Controllers can be hidden individually.
             </p>
-               <a href="#" class="thumbnail">
-               <img src="images/controller.png" alt="...">
-               </a>
         </div>
     </div>
       </div>
       <div class="container">
         <div class="starter-template">
           <h1>Can I use my renaissance antiqua in Metapolator?</h1>
-            <p class="lead"> Yes, for interpolation using at least 2 masters no extra work is needed. Metapolation from a single master requires tagging consistently using pairs of points.
+            <p class="lead"> Yes, for interpolation using at least 2 masters no extra work in Metapolator is needed. Metapolation from a single master requires tagging consistently using pairs of points.
             </p>
                <a href="#" class="thumbnail">
                <img src="images/garamond.gif" alt="...">
@@ -209,14 +206,6 @@ If we want to specify single points we click on a point in the editor and assign
         </div>
     <!-- /.container -->
 
-    <div class="container">
-        <div class="starter-template">
-
-          <h1>Do I need to program Metafont code?</h1>
-            <p class="lead"> No, metafont functions are controlled by data sliders (dat-gui), You could extend the functionality and write your own metafont functions and contribute to our git repository. This example here shows how to change the font by using a Metafont parameter 'x-height'. Please use the controller to change values.
-            </p>
-        </div>
-    </div>
 
     <div class="container">
         <div class="starter-template">
@@ -231,8 +220,6 @@ The level of abstraction is up to the user. You can have total control of all an
         <div class="starter-template">
           <h1>When I want to apply some metafont function to the tagged points, how do I do it? How does the serif function work? Eg, make all cap-serif points 2x taller?</h1>
             <p class="lead">
-          <h1>How does the serif function work?</h1>
-            <p class="lead">
 Serifs can be ‘attached’ to every corner point of a stroke. The user gets control of the serif by setting parameters like serif height, slab, width and darkness.
             </p>
                 <a href="#" class="thumbnail">
@@ -243,10 +230,9 @@ Serifs can be ‘attached’ to every corner point of a stroke. The user gets co
 
       <div class="container">
         <div class="starter-template">
-          <h1>Can I make an italic font from a regular cut?</h1>
+          <h1>Can I make italics from a regular cut?</h1>
             <p class="lead">
-Yes, you can use the parameter ‘slant’ which is using optical correction when slanting outlines and substitute common (real) italics glyphs like g, a, or y
-(italic font)
+Yes, you can use the parameter ‘slant’ which is using optical corrections when slanting outlines and if needed substitute real italics like g, a, or y.
         </div>
     </div>
 
@@ -255,8 +241,6 @@ Yes, you can use the parameter ‘slant’ which is using optical correction whe
           <h1>What is metapolation?</h1>
             <p class="lead">
 Interpolation enhanced with metafont parameters, for example to change the x-height of a font we use some metafont functions to calculate the new curve.
-            <p class="lead">
-Interpolation enhanced with metafont parameters, for example to change the x-height of a font we need to use some metafont functions.
             </p>
         </div>
     </div>
@@ -265,7 +249,7 @@ Interpolation enhanced with metafont parameters, for example to change the x-hei
         <div class="starter-template">
           <h1>What is a card?</h1>
                         <p class="lead">
-A card is a specimen which shows the instance from one or muliple used axes.
+A card is a specimen which shows the instance from one or muliple used axes. This is how it looks when a user is starting a new project in Metapolator.
             </p>
               <a href="#" class="thumbnail">
               <img src="images/card.jpg" alt="...">
@@ -274,18 +258,6 @@ A card is a specimen which shows the instance from one or muliple used axes.
         </div>
     </div>
 
-       <div class="container">
-        <div class="starter-template">
-          <h1>Can I change the specimen?</h1>
-                        <p class="lead">
-We can choose from glyph, paragraph or waterfall.
-            </p>
-              <a href="#" class="thumbnail">
-              <img src="images/card.jpg" alt="...">
-              </a>
-
-        </div>
-    </div>
 
       <div class="container">
         <div class="starter-template">
@@ -333,6 +305,10 @@ You can use the master editor to tag points or move their position. To make big 
             <p class="lead">
 Yes, use the column settings to change from 1, 2, or 4 column layout
             </p>
+              <a href="#" class="thumbnail">
+              <img src="images/four.jpg" alt="...">
+              </a>
+  
       </div>
 
       <div class="container">
@@ -341,14 +317,29 @@ Yes, use the column settings to change from 1, 2, or 4 column layout
             <p class="lead">
 The user can choose between glyph view, waterfall or paragraph.
             </p>
+              <a href="#" class="thumbnail">
+              <img src="images/setting_specimen.jpg" alt="...">
+              </a>
         </div>
     </div>
 
       <div class="container">
         <div class="starter-template">
+          <h1>Designers pick a bold or light weight by seeing this style in the context of other styles, so you can actually look for a right value for your bold right there. Example, a mostly regular paragraph with some bold words or sentences...</h1>
+            <p class="lead">
+We can copy paste text fragments from one card to another which then also copies its axis and instance settings. When selecting the instance name above the text fragment, it loads the actual values in the dat-gui for that specific instance:            </p>
+              <a href="#" class="thumbnail">
+              <img src="images/multicard.png" alt="...">
+              </a>
+        </div>
+    </div>
+
+
+      <div class="container">
+        <div class="starter-template">
           <h1>I’m using my font styles created with metapolator on my website, if I change one of the styles in metapolator, will it change on my website too?</h1>
             <p class="lead">
-You can use the direct webfont link to embed an instance into your website. This allows to make changes on the fonts which affects the design of your page.
+You can use a webfont link to embed a specific instance into your website. This allows to make changes on the fonts which affects the design of your page in realtime.
             </p>
         </div>
     </div>
@@ -357,8 +348,12 @@ You can use the direct webfont link to embed an instance into your website. This
         <div class="starter-template">
           <h1>How many axes and masters can I create?</h1>
             <p class="lead">
-Its modular design allows the user to create unlimited amount of axes and link unlimited masters to create very complex interpolation environments. The environment is not limited to ‘multidimensions’ as we believe a dimensional space limits the users imagination and makes it complicated. Its still possible though to recreate such a model.
+Its modular design allows the user to create unlimited amount of axes and link unlimited masters to create very complex interpolation environments. The environment is not limited to ‘multidimensions’ as we believe a dimensional space limits the users imagination and makes it complicated. Its still possible though to recreate such a models as the Noordzij cube.
             </p>
+              <a href="#" class="thumbnail">
+              <img src="images/cube.png" alt="...">
+              </a>
+
         </div>
     </div>
 
@@ -366,16 +361,7 @@ Its modular design allows the user to create unlimited amount of axes and link u
         <div class="starter-template">
           <h1>Can I create new masters within Metapolator?</h1>
             <p class="lead">
-Yes, a user can create a new master from every instance or duplicate the master itself.
-            </p>
-        </div>
-    </div>
-
-      <div class="container">
-        <div class="starter-template">
-          <h1>How can I display the master and not the instance?</h1>
-            <p class="lead">
-The cards only shows instances. If we want to show a master, we can create a new instance and name and set all slider values to its master.
+Yes, a user can create a new master from every instance or duplicate the master itself. Go to menu: master: create master from instance.
             </p>
         </div>
     </div>
@@ -384,8 +370,12 @@ The cards only shows instances. If we want to show a master, we can create a new
         <div class="starter-template">
           <h1>I’m lost with all these masters and instances I’ve created. </h1>
             <p class="lead">
-You can use the tree diagram to get an overview for all created masters and instances within your project.
+There will be a dendogram to get an overview for all created masters and instances within your project.
             </p>
+              <a href="#" class="thumbnail">
+              <img src="images/dendogram.png" alt="...">
+              </a>
+
         </div>
     </div>
 
@@ -393,8 +383,12 @@ You can use the tree diagram to get an overview for all created masters and inst
         <div class="starter-template">
           <h1>I don’t like the logo, can I change it?</h1>
             <p class="lead">
-Yes, click on the logo and you can set your own font and the recursion value.
+Yes, click on the logo in the metapolator web application and set your font and recursion.
             </p>
+              <a href="#" class="thumbnail">
+              <img src="images/logo.png" alt="...">
+              </a>
+
         </div>
     </div>
 
