--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-10" style="width: 760px" ng-controller="paperjsCtrl">
                         <div class="row" style="margin-top:20px">
                                 <div id="paperjsCanvas"></div>
+                                <div class="sliders" id="paperGlyphSlider"></div>
                         </div>
                     </div>
                 <div class="row" ng-controller="SliderCtrl">
