--- a/demo/demo.html
+++ b/demo/demo.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title>Make your website scroll one page at a time with OnePageScroll.js</title>
+		<title>Metapolator</title>
 		<meta name="description" content="The plugin will detect your mouse wheel and swipe gestures to determine which way the page should scroll." />
 		<meta name="keywords" content="scroller, jquery one page scroll, onepagescroll, animated scrolling" />
 		<meta name="author" content="Author for Onextrapixel" />
@@ -21,9 +21,9 @@
 	</head>
 	<body class="demo1">
 	<div class="nav-top clearfix">
-		<span class="left"><a class="nav-icon" href="google.com"><span><img src="img/logo.svg" height="25px"></span></a></span>
-		<span class="right"><a class="nav-icon" href="google.com"><span>metapolator.com</span></a></span>
-		<span class="right"><a class="nav-icon" href="google.com"><span>about</span></a></span>
+		<span class="left"><a class="nav-icon" href="http://google.com"><span><img src="img/logo.svg" height="30px"></span></a></span>
+		<span class="right"><a class="nav-icon" href="http://google.com"><span>metapolator.com</span></a></span>
+		<span class="right"><a class="nav-icon" href="http://google.com"><span>about</span></a></span>
 	</div>
 
 	</div> 
@@ -50,40 +50,27 @@ font families.</h1>
 
     <section class="page3">
       <div class="page_container">
-        <h1>Tools</h1>
-        <p>"
-Type designers need a toolbox to build a single typeface out into a family of styles. Metapolator provides an initial set of tools for common processes, but it is fully extendable. 
-
-* spacing (tighter or looser)
-* weight (regular to bold, or to light)
-* width (normal to narrow, or extended)
-* x-height (increased or decreased, without distortions)
-
-        	"</p>
-      </div>
-    </section>
-
-    <section class="page3">
-      <div class="page_container">
-        <h1>Workflow</h1>
-        <p>"
-Type designers need tools that snap into their existing workflow.
-
-        	"</p>
-      </div>
-    </section>
-
-    <section class="page3">
-      <div class="page_container">
-        <h1>Standards</h1>
-        <p>"The text-based and interchangeable UFO source format has become an industry standard. 
-
+   <table>
+  <tr>
+    <th valign="top" width="30%"><h1>Tools</h1></th>
+    <th valign="top" width="30%"><h1>Workflow</h1></th>
+    <th valign="top" width="30%"><h1>Standards</h1></th>
+  </tr>
+  <tr>
+    <td valign="top"><p>Type designers need a toolbox to build a single typeface out into a family of styles. Metapolator provides an initial set of tools for common processes, but it is fully extendable. 
+<ul><li>spacing (tighter or looser)</li>
+<li>weight (regular to bold, or to light)</li>
+<li>width (normal to narrow, or extended)</li>
+<li>x-height (increased or decreased, without distortions)</li></ul></p></td>
+    <td valign="top"><p>Type designers need tools that snap into their existing workflow.</p></td>
+    <td valign="top"><p>The text-based and interchangeable UFO source format has become an industry standard. 
 Metapolator imports and exports UFO fonts, to add a new link in the chain of font style and family creation. 
-
-As a web app it is built with an industry standard too: AngularJS."</p>
-      </div>
-    </section>
-    <section class="page4">
+As a web app it is built with an industry standard too: AngularJS.</p></td>
+  </tr>
+</table>
+         </div>
+         </section>
+         <section class="page4">
       <div class="page_container">
         <p><br><br></p>
         <anode1>anode</anode1><br><anode2w>anode</anode2w><br><anode3>anode</anode3> 
@@ -158,18 +145,15 @@ As a web app it is built with an industry standard too: AngularJS."</p>
 
     <section class="page9">
       <div class="page_container">
-        <h1>Summary of todays working version</h1>
-        <p>What we have so far:
-<ul><li>Proof of concept online editor:</li>
-<li>loading fonts</li>
+        <h1>Proof of concept</h1>
 <li>creating masters from instances</li>
 <li>duplicating masters</li>
-<li>moving zpoints</li>
+<li>positioning vector points</li>
 <li>loading 2 axes and unlimited masters </li>
 <li>control point mode</li>
 <li>pen mode</li>
-<li>archive of projects</li>
-<li>generating otf, ttf and new ufos</li></ul>
+<li>storage of projects</li>
+<li>loading ufos, generating otf, ttf and new ufos</li></ul>
 <li>parameterisation of outline in pen mode</li>
 <ul><li>various metafont parameters available:</li>
 <li>tension, shifting, slanting, serifs, vertical metrics like changing x-heigth</li>
@@ -177,11 +161,10 @@ As a web app it is built with an industry standard too: AngularJS."</p>
 <li>stroke direction, stroke angle</li></ul>
 <ul><li>Command line tool:</li>
 <li>interpolation, extrapolation</li>
+<li>interpolation of kerning</li>
 <li>defining unlimited axes, using unlimited masters </li>
 <li>create 1:1 replica from original source</li>
-<li>Examples on demo page:</li>
-<li>using new dat-gui elements and environment using angular.js</li>
-<li>examples interpolation using opentype.js</ul></ul></p>
+
       </div>
     </section>
     <section class="page10">
