two js mokup implementation

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 We wanted a way to draw fonts yet have the power of Metafont – a programming language for specifying typefaces with algorithms.
                                 </p>
                                 <p>
-It does not have features for drawing glyphs; you must draw your initial masters using a glyph-focused font editor, such as FontForge. When given a master drawn in another program and saved in the UFO format (without any modifications) Metapolator first offers classical interpolation. 
+It does not have features for drawing glyphs; you must draw your initial masters using a glyph-focused font editor, such as FontForge. When given a master drawn in another program and saved in the UFO format (without any modifications) Metapolator first offers classical interpolation.
 <p>
 This means you can arrange many masters along various axes, and Metapolator can create new instances between these masters and save them in both the UFO source format and the OTF/TTF binary format, to use straight away.
                                 </p>
@@ -148,4 +148,5 @@ What makes Metapolator special is that it also allows you to derive new masters 
 <script type="text/javascript" src="app/js/instance.js"></script>
 <script type="text/javascript" src="app/js/opentype.js"></script>
 <script type="text/javascript" src="app/js/dat.gui.js"></script>
+<script type="text/javascript" src="app/js/two.js"></script>
 </html>
