--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
             <div class="row">
             <div class="col-md-8 col-lg-offset-3" ng-controller="canvasCtrl">
                 <div class="row">
+                    <div class="col-xs-12 col-sm-6 col-md-10" style="width: 760px" ng-controller="twojsCtrl">
+                        <div class="row" style="margin-top:20px">
+                                <div id="twojsCanvas"></div>
+                                <div class="sliders" id="twoGlyphSlider"></div>
+                        </div>
+                    </div>
                     <div class="col-xs-12 col-sm-6 col-md-10" style="width: 760px" ng-controller="paperjsCtrl">
                         <div class="row" style="margin-top:20px">
                                 <div id="paperjsCanvas"></div>
