--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Metapolator - Draft</title>
+    <title>Metapolator</title>
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
 
@@ -39,7 +39,7 @@
     <ul class="nav console" data-spy="affix">
         <li class="active"><a href="#one">Metapolator.com</a>
         <li><a href="#two">Concept</a></li>
-        <li><a href="#three">The Workflow</a></li>
+        <li><a href="#three">The Workflow (Click to walkthrough)</a></li>
         <li><a href="#four">How does it works ?</a></li>
         <li><a href="#five">The Metapolator Universe</a>  
         <li><a href="#six">Naming parts</a></li>
@@ -660,8 +660,8 @@ possible ways.</p>
 		<div class="container-fluid">
 			<div class="row" id="unpin13">
 				<div class="col-sm-2 centered"></div>
-				<div class="col-sm-4 centered white"><h2>Join us !</h2></div>
-				<div class="col-sm-4 centered white"><h2><i class="fa fa-github"></i></h2></div>
+				<div class="col-sm-4 centered white"><h2><a href="https://plus.google.com/communities/110027004108709154749">Join us on G+</a></h2></div>
+				<div class="col-sm-4 centered white"><h2><a href="https://github.com/metapolator/">Join us on Github</a></h2></div>
 				<div class="col-sm-2 centered"></div>
 			</div>
 		</div>
