--- a/index.html
+++ b/index.html
@@ -696,6 +696,17 @@ possible ways.</p>
 		    }
 		  })
 		</script>
+
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-49781038-1', 'metapolator.com');
+		  ga('send', 'pageview');
+
+		</script>
 		
 		<script type="text/javascript">
 			$('.carousel').carousel({  
