--- a/index.html
+++ b/index.html
@@ -81,13 +81,10 @@
 			<div class="row">
 				<div class="col-xs-2"></div>
 				<div class="col-xs-8 leftalign">
-					<h2 class="white">We are unique. We show who we are through typography. We want our
-identities to be seen and heard through fonts. Today, billions of
-people need fonts that are custom designed for themselves and their
-businesses.<br><br>Metapolator enables all font lovers, from children
-to professional type designer, to create unique typefaces within large
-font families.<br><br>Metapolator turns any existing typeface into a
-skeleton font and lets users control it.</h2>
+					<h2 class="white">Metapolator turns any existing typeface into a skeleton font and lets users express themselves with a set of controls.
+<br><br>In the modern world typography is becoming more and more important in how we express ourselves. Typography has become and extension of who you are, not just through the words you choose, but also the way the typography can express an emotional connection to the words chosen.
+<br><br>Today, billions of people need fonts that are custom designed for themselves and their businesses.
+With the new Metapolator platform all font lovers, from children to professional type designer, can create unique typefaces within large font families by using existing fonts and controlling it with simple adjustment tools.</h2>
 				</div>
 				<div class="col-xs-2"></div>
 			</div>
