twojs interpolation, closes #92, maybe solves #94

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-10" style="width: 760px" ng-controller="twojsCtrl">
                         <div class="row" style="margin-top:20px">
                                 <div id="twojsCanvas"></div>
-                                <div class="sliders" id="twoGlyphSlider"></div>
+                                <div class="sliders" id="twojsSlider"></div>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-10" style="width: 760px" ng-controller="paperjsCtrl">
