Improvement of Demo page
Title pages are more responsive.
Also the header is now disappearing on small devices (such as phones)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <body data-spy="scroll" data-target="#affix-nav">
 
-  <nav id="affix-nav" class="sidebar col-md-4">
+  <nav id="affix-nav" class="sidebar col-md-4 hidden-xs">
     <ul class="nav console" data-spy="affix">
         <li class="active"><a href="#one">Metapolator.com</a>
         <li><a href="#two">Concept</a></li>
